--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
   "dependencies": {
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
-    "next": "14.2.3",
+    "@radix-ui/react-slider": "^1.2.3",
+    "next": "^14.2.23",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.10.0",
+    "plyr-react": "^5.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.4"
+    "react-hook-form": "^7.51.4",
+    "react-player": "^2.16.0",
+    "swiper": "^11.2.2"
   },
   "devDependencies": {
     "@types/node": "^20",
