--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "swiper": "^11.2.2"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^15.1.7",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
