--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
     "@radix-ui/react-slider": "^1.2.3",
+    "@vercel/analytics": "^1.5.0",
     "next": "^14.2.23",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.10.0",
