--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Nextly Landing Page Template",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "lint": "next lint",
+    "dev": "next",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "export": "npm run build && next export"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,8 @@
     "swiper": "^11.2.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
     "@next/bundle-analyzer": "^15.1.7",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
@@ -43,6 +46,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "frontmatter-markdown-loader": "^3.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
