--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nextly-template",
+  "name": "The JB Experience",
   "version": "2.0.0",
-  "description": "Nextly Landing Page Template",
+  "description": "The JB Experience | London Wedding & Event Band – Pop, Rock & Folk",
   "private": true,
   "scripts": {
     "lint": "next lint",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/web3templates/nextly-template"
+    "url": "https://github.com/josephabateman/The-JB-Experience"
   },
   "keywords": [
     "nextjs",
